kustomize/overlay/dev/iwiick-brean-and-brew-dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-brean-and-brew-dev
  labels:
    environmentId: env_31ddbbde-7bfc-4d60-89f4-920f8e416be0
    projectId: project_78bf2621-6ba3-4cd7-963a-058179ce0ef9
    projectName: iwiick-brean-and-brew
    environmentName: dev
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
