kustomize/overlay/dev/iwiick-brean-and-brew-dev-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-brean-and-brew-dev
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_78bf2621-6ba3-4cd7-963a-058179ce0ef9
    environmentId: env_31ddbbde-7bfc-4d60-89f4-920f8e416be0
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_31ddbbde-7bfc-4d60-89f4-920f8e416be0
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
